--- a/index.html
+++ b/index.html
@@ -500,6 +500,94 @@
     </div>
 
 
+    <!-- HOW IT WORK -->
+    <div class="container">
+        <div style="margin: 80px 0">
+            <p class="h1">How it works</p>
+            <p>Find out how to get started</p>
+            <div class="row g-4">
+                <div class="col-12 col-md-4">
+                <div class="section3-cards-background py-2 pb-4 d-flex d-md-block align-items-center justify-content-around">
+                    <div>
+                    <img class="d-block m-auto section-how-img" src="./images/Icon.png" width="auto" />
+                    </div>
+                    <div>
+                    <p class="h5 py-3 px-4 text-center section-how-title">
+                        Setup Your wallet
+                    </p>
+                    <p class="text-center d-block m-auto section-how-desc" style="width: 270px">
+                        Set up your wallet of choice. Connect it to the Animarket by
+                        clicking the wallet icon in the top right corner.
+                    </p>
+                    </div>
+                </div>
+                </div>
+                <div class="col-12 col-md-4">
+                <div class="section3-cards-background py-2 pb-4 d-flex d-md-block align-items-center justify-content-around">
+                    <div>
+                    <img class="d-block m-auto section-how-img" src="./images/Icon (1).png" width="auto" />
+                    </div>
+                    <div>
+                    <p class="h5 py-3 px-4 text-center section-how-title">
+                        Setup Your wallet
+                    </p>
+                    <p class="text-center d-block m-auto section-how-desc" style="width: 270px">
+                        Set up your wallet of choice. Connect it to the Animarket by
+                        clicking the wallet icon in the top right corner.
+                    </p>
+                    </div>
+                </div>
+                </div>
+
+                <div class="col-12 col-md-4">
+                <div class="section3-cards-background py-2 pb-4 d-flex d-md-block align-items-center justify-content-around">
+                    <div>
+                    <img class="d-block m-auto section-how-img" src="./images/Icon (2).png" width="auto" />
+                    </div>
+                    <div>
+                    <p class="h5 py-3 px-4 text-center section-how-title">
+                        Setup Your wallet
+                    </p>
+                    <p class="text-center d-block m-auto section-how-desc" style="width: 270px">
+                        Set up your wallet of choice. Connect it to the Animarket by
+                        clicking the wallet icon in the top right corner.
+                    </p>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="container my-4 p-5 section_bottom">
+            <div class="row gy-3 ">
+                <div class="col-12 col-md-6">
+                    <div class="section_bottom_image">
+                        <img src="./images/Photo.png" alt="">
+                    </div>
+                </div>
+                <div class="col-12 col-md-6">
+                    <div class="section_bottom_right">
+                        <p class="title right_title">Join our weekly <br> digest</p>
+                        <p class="text right_text"> Get exclusive promotions & updates <br> straight to your inbox.</p>
+                        <form class="form w-100 d-flex justify-content-between flex-column">
+                            <div class="input">
+                                <input type="text" placeholder="Enter your email here">
+                            </div>
+                            <div class="input">
+                                <button><i class="text-white fa-regular fa-message"></i> Subscribe</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+    </div>
 
 
 
